fix: asymmetric container padding to shift all sections right

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-left: 10rem;
-    padding-right: 12rem;
+    padding-right: 8rem;
   }
 
   .custom-scrollbar::-webkit-scrollbar {
